--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "slugifi",
   "version": "1.0.4",
   "description": "Slugify a string!",
-  "main": "lib/index.js",
-  "bin": "lib/index.js",
-  "types": "lib",
+  "main": "index.js",
+  "bin": "index.js",
   "scripts": {
-    "test": "echo \"No test specified\"",
-    "build": "tsc -p ."
+    "test": "echo \"No test specified\""
   },
   "keywords": [
     "slug"
@@ -21,9 +19,5 @@
     "url": "https://github.com/Suzan-Dev/slugifi/issues"
   },
   "homepage": "https://github.com/Suzan-Dev/slugifi",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^14.14.22",
-    "typescript": "^4.1.3"
-  }
+  "license": "MIT"
 }
